# online_library

./: .dockerignore  .env-test  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
src/: Dockerfile2  config.py  database.py  exceptions.py  init.py  main.py
src/api/: books.py  dependencies.py  favorites.py  images.py  notifications.py  reviews.py  users.py
src/connectors/: redis_connector.py
src/constants/: roles.py  test_constants.py
src/migrations/: env.py
src/migrations/versions/: 2026_04_16_1230-initial_migration.py  2026_04_16_1336-add_books_table.py  2026_05_01_1144-create_reviews_table.py  2026_05_02_1322-add_one_to_many_review_in_book.py  2026_05_03_1056-create_favoriteorm.py  2026_05_03_1100-create_favoriteorm_v2.py  2026_05_23_1125-create_notification_table.py
src/models/: __init__.py  books.py  favorites.py  notifications.py  reviews.py  roles.py  users.py
src/repositories/: base.py  books.py  favorites.py  notifications.py  reviews.py  roles.py  users.py
src/repositories/mapper/: base.py  mapper.py
src/schemas/: books.py  favorites.py  notifications.py  reviews.py  roles.py  users.py
src/services/: base.py  books.py  favorites.py  notifications.py  reviews.py  users.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
test/: conftest.py  constants.py  mock_role_data.json  mock_users_data.json
test/helpers/: auth.py
test/integration_tests/: test_auth.py
test/unit_test/: test_api.py  test_auth.py
(+5 files in other folders)
