[project]
name = "online_library"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Только самые безобидные и полезные правила
select = ["I"]          # сортировка импортов (самое важное)

[tool.ruff.format]
quote-style = "double"